--- a/RS2ALL.ioc
+++ b/RS2ALL.ioc
@@ -42,7 +42,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA13.Mode=Serial_Wire
@@ -106,7 +106,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=RS2ALL.ioc
 ProjectManager.ProjectName=RS2ALL
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
