--- a/RS2ALL.ioc
+++ b/RS2ALL.ioc
@@ -8,29 +8,27 @@ Mcu.Family=STM32F0
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM14
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP3=SYS
+Mcu.IP4=TIM14
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F030K6Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA5
 Mcu.Pin3=PA9
 Mcu.Pin4=PA10
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PA15
-Mcu.Pin8=PB3
-Mcu.Pin9=PB4
-Mcu.PinsNb=15
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PA15
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030K6Tx
@@ -45,6 +43,14 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=PN532_REQ
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=PN532_RST
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Locked=true
@@ -59,12 +65,6 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
-PB3.Mode=Full_Duplex_Master
-PB3.Signal=SPI1_SCK
-PB4.Mode=Full_Duplex_Master
-PB4.Signal=SPI1_MISO
-PB5.Mode=Full_Duplex_Master
-PB5.Signal=SPI1_MOSI
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Label
@@ -110,7 +110,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -128,11 +128,6 @@ RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
-SPI1.CalculateBaudRate=16.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 TIM14.IPParameters=Period,Prescaler
 TIM14.Period=100
 TIM14.Prescaler=100
